add head showing workaround

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <div id="container">
 
     <h1><span>Audio device selection && Peer connection: audio only </span></h1>
+    <h2><span>Workaround : stop old outgoing audio track after replaceTrack </span></h2>
 
 
     <div id="audio">
